# leaf

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  Trunk.toml  about.html  about_ja.html  adsense.js  application.toml  auth.js  db.js  deploy.sh  drive.js  editor_interop.js  features_de.html  features_en.html  features_es.html  features_fr.html  features_it.html  features_ja.html  features_ko.html  features_nl.html  features_zh.html  guide.html  index.html  input.css  licenses.html  localhost+2-key.pem  localhost+2.pem  manifest.json  out_tw.css  out_tw2.css  package-lock.json  package.json  privacy.html  subscription.js  sw.js  (+5 more)
.agents/workflows/: deploy.md
.claude/commands/: all-build.md  deploy.md  gitpush.md
.claude/skills/deploy/: SKILL.md
.claude/skills/gitpush/: SKILL.md
.gemini/: settings.local.json
.gemini/commands/: deploy.toml  gitpush.toml
.github/workflows/: build-macos-arm.yml  tauri-build.yml
assets/css/: input.css
assets/html/: about.html  about_ja.html  guide.html  licenses.html  terms.html
assets/js/: auth.js  db.js  drive.js  editor_interop.js  sw.js
config/: application.toml
docs/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  leaf_requirements.md  leaf_specification.md  tutorial.html  usualy_requirements.md
nginx/: leaf.digitarhythm.net.conf
server/: ecosystem.config.js  index.js  package-lock.json  package.json
src/: adsense_interop.rs  app.rs  auth_interop.rs  db_interop.rs  drive_interop.rs  editor_interop.js  i18n.rs  js_interop.rs  main.rs  subscription_interop.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: button_bar.rs  char_code_dialog.rs  dialog.rs  empty_sheet_dialog.rs  file_open_dialog.rs  mod.rs  preview.rs  settings_dialog.rs  sheet_info_dialog.rs  shortcut_help.rs  status_bar.rs  tab_area.rs  tab_bar.rs  tab_select_dialog.rs
