[package]
name = "leaf"
version = "0.11.1"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "HtmlTextAreaElement",
    "HtmlElement",
    "Window",
    "Document",
    "Element",
    "console",
    "Storage", 
    "Navigator",
    "AbortController",
    "AbortSignal",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "Event",
    "DataTransfer",
    "DragEvent",
    "HtmlSelectElement"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = "0.11"
toml = "0.8"
futures = "0.3"
