[package]
name = "leaf"
version = "0.19.50"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "HtmlTextAreaElement",
    "HtmlElement",
    "Window",
    "Document",
    "Element",
    "console",
    "Storage", 
    "Navigator",
    "AbortController",
    "AbortSignal",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "Event",
    "DataTransfer",
    "DragEvent",
    "HtmlSelectElement",
    "CustomEvent",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "Screen",
    "DomTokenList",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomRect"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = "0.11"
toml = "0.8"
futures = "0.3"

[profile.release]
opt-level = "z"       # サイズ最適化
lto = true            # Link-Time Optimization
codegen-units = 1     # 単一コード生成ユニット（最適化を最大化）
strip = true          # デバッグシンボル除去
