[package]
name = "leaf-app"
version = "0.19.21"
description = "Leaf - A Minimal Text Editor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Leaf"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-oauth = "2.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.13.2", features = ["json"] }
url = "2.5.8"
tokio = { version = "1.49.0", features = ["sync", "time", "macros"] }
open = "5.3.3"
portable-pty = "0.8"
once_cell = "1"
base64 = "0.22"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.5"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
